# adk-python

./: CHANGELOG.md  pyproject.toml
.github/: release-please-config.json
.github/workflows/: triage.yml
contributing/samples/adk_triaging_agent/: agent.py  main.py
contributing/samples/agent_registry_agent/: agent.py
contributing/samples/agent_tool_with_grounding_metadata/: agent.py
contributing/samples/bigquery/: agent.py
contributing/samples/data_agent/: agent.py
contributing/samples/hello_world/: main.py
contributing/samples/live_bidi_streaming_parallel_tools_agent/: README.md  agent.py
contributing/samples/local_environment_skill/: README.md  agent.py
contributing/samples/local_environment_skill/skills/weather-skill/references/: weather_info.md
contributing/samples/skills_agent/: agent.py
contributing/samples/toolbox_agent/: README.md
src/google/adk/: version.py
src/google/adk/agents/: config_agent_utils.py  invocation_context.py  llm_agent.py
src/google/adk/cli/: cli_deploy.py  fast_api.py
src/google/adk/flows/llm_flows/: base_llm_flow.py  functions.py
src/google/adk/integrations/agent_registry/: agent_registry.py
src/google/adk/integrations/parameter_manager/: parameter_client.py
src/google/adk/integrations/secret_manager/: secret_client.py
src/google/adk/models/: gemini_llm_connection.py  google_llm.py  llm_response.py
src/google/adk/plugins/: bigquery_agent_analytics_plugin.py
src/google/adk/sessions/: in_memory_session_service.py  vertex_ai_session_service.py
src/google/adk/tools/: base_toolset.py  skill_toolset.py
src/google/adk/tools/bigquery/skills/bigquery-ai-ml/: SKILL.md
src/google/adk/tools/mcp_tool/: mcp_tool.py  mcp_toolset.py
src/google/adk/utils/: model_name_utils.py
tests/integration/: test_generate_eval_cases_cli.py
tests/integration/integrations/agent_identity/: README.md  test_2lo_flow.py  test_3lo_flow.py
tests/remote/triggers/: README.md  conftest.py  test_trigger_eventarc.py  test_trigger_pubsub.py
tests/remote/triggers/terraform/: cloud_run.tf  eventarc.tf  iam.tf  main.tf  outputs.tf  pubsub.tf  variables.tf
tests/remote/triggers/test_agent/: Dockerfile  agent.py
tests/unittests/a2a/executor/: test_a2a_agent_executor_impl.py
tests/unittests/a2a/integration/: server.py  test_client_server.py
tests/unittests/agents/: test_invocation_context.py  test_remote_a2a_agent.py
tests/unittests/artifacts/: test_artifact_service.py
tests/unittests/auth/: test_auth_config.py  test_auth_provider_registry.py  test_credential_manager.py
tests/unittests/cli/: test_fast_api.py  test_trigger_routes.py
tests/unittests/cli/utils/: test_cli_create.py  test_cli_deploy.py  test_gcp_utils.py
tests/unittests/evaluation/: test_evaluation_generator.py  test_vertex_ai_scenario_generation_facade.py
tests/unittests/flows/llm_flows/: test_base_llm_flow.py  test_functions_thread_pool.py  test_llm_callback_span_consistency.py
tests/unittests/integrations/agent_identity/: test_gcp_auth_provider.py
tests/unittests/integrations/agent_registry/: test_agent_registry.py
tests/unittests/integrations/parameter_manager/: test_parameter_client.py
tests/unittests/integrations/secret_manager/: test_secret_client.py
tests/unittests/models/: test_anthropic_llm.py  test_gemini_llm_connection.py  test_gemma_llm.py  test_google_llm.py  test_interactions_utils.py
tests/unittests/plugins/: test_bigquery_agent_analytics_plugin.py
tests/unittests/sessions/: test_session_service.py  test_v0_storage_event.py  test_vertex_ai_session_service.py
tests/unittests/tools/: BUILD  test_base_google_credentials_manager.py  test_base_toolset.py  test_bash_tool.py  test_skill_toolset.py
tests/unittests/tools/apihub_tool/clients/: test_secret_client_deprecated.py
tests/unittests/tools/bigquery/: test_bigquery_client.py  test_bigquery_skill.py  test_bigquery_tool_config.py
tests/unittests/tools/mcp_tool/: test_mcp_session_manager.py  test_mcp_tool.py  test_mcp_toolset.py
